--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -11,7 +11,7 @@ body {
 
 .imgTxt {
     text-align: center;
-    /* font-weight: 1000; */
+    font-weight: 1000;
 }
 
 .masterContainer {
@@ -37,15 +37,15 @@ body {
 
 .rowDiscContainer {
     /* order: -1; */
-    width: 120%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 #imgContainer {
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -91,7 +91,18 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+}
 
 #abstractText {
-    text-align: center;
+    text-align: left;
+    width: 80%;
+    font-size: 16px;
+}
+
+#discText {
+    text-align: left;
+    width: 80%;
+    font-size: 16px;
 }
