--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -97,12 +97,14 @@ h2 {
 
 #abstractText {
     text-align: left;
-    width: 80%;
+    /* width: 80%; */
     font-size: 16px;
+    max-width: 1000px;
 }
 
 #discText {
     text-align: left;
-    width: 80%;
+    /* width: 80%; */
     font-size: 16px;
+    max-width: 1000px;
 }
