--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -9,6 +9,14 @@ body {
     margin-bottom: 50px;
 }
 
+#concept {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 1000px;
+    margin-top: 20px;
+}
+
 .imgTxt {
     text-align: center;
     font-weight: 1000;
@@ -24,6 +32,7 @@ body {
 .titleContainer {
     order: -1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -86,9 +95,19 @@ p {
     text-align: center;
 }
 
+table {
+    margin-left:auto;
+    margin-right:auto;
+    font-size: 20px;
+}
+
+td {
+    width: 20%;
+}
+
 h1 {
     padding-top: 3em;
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
     text-align: center;
 }
 
