--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -13,8 +13,15 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1050px;
     margin-top: 20px;
+}
+
+#arch {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 1050px;
 }
 
 .imgTxt {
