--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -107,6 +107,7 @@ table {
     margin-left:auto;
     margin-right:auto;
     font-size: 20px;
+    text-align: center;
 }
 
 td {
@@ -135,6 +136,11 @@ h2 {
     /* width: 80%; */
     font-size: 16px;
     max-width: 1000px;
+}
+
+pre {
+    margin-top: 0px;
+    font-size: 16px;
 }
 
 @media (max-width:480px) {
