--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -142,6 +142,7 @@ pre {
     margin-top: 0px;
     font-size: 16px;
     overflow: auto;
+    white-space: pre-wrap;
 }
 
 @media (max-width:480px) {
