--- a/giraffehd/index.css
+++ b/giraffehd/index.css
@@ -145,6 +145,12 @@ pre {
     white-space: pre-wrap;
 }
 
+#paper {
+    margin-top: 30px;
+    margin-bottom: 21px;
+    font-weight: 600;
+}
+
 @media (max-width:480px) {
     .imgTxt {
         font-size: 16px;
